# project4complier_

./: CMakeLists.txt  ast.txt  parse_process.txt  tokens.txt
docs/: architecture.md  doc.md  expected_input_example.md  grammar.md  parser_doc.md  slides.typ  程序使用说明.md
src/: ast.txt  main.cpp  parse_process.txt  pascal_compiler  pascal_compiler.sh  tokens.txt
src/codegen/: codegen.cpp  codegen.h
src/lexer/: interpret_table.md  lexer.cpp  lexer.h  token.h
src/parser/: Makefile  ast.h  ast.txt  first_follow.txt  grammar.cpp  grammar.h  lexer.cpp  ll1_grammar.txt  main.cpp  parse_process.txt  parse_table.txt  parser.cpp  parser.h  token.h  tokens.txt
src/semantic/: semantic_analyzer.cpp  semantic_analyzer.h  symbol_table.cpp  symbol_table.h
tests/: run_tests.sh  test_complex.tok  test_error.tok  test_integration.cpp  test_lexer.cpp  tmp_downto.c  tmp_record_full.c  tmp_record_full.pas  tmp_semantic_loc.pas  tmp_simple_fail.pas  tmp_while_check.pas
tests/correct_test/: annotation.c  annotation.pas  correct1.c  correct1.pas  correct2.c  correct2.pas  correct3.c  correct3.pas  correct4.c  correct4.pas  correct5.c  correct5.pas  correct6.c  correct6.pas  correct_2.c  correct_2.pas  correct_all.c  correct_all.pas  valid_ascii_1.c  valid_ascii_1.pas  valid_ascii_2.c  valid_ascii_2.pas  valid_bracket_1.c  valid_bracket_1.pas  valid_bracket_2.c  valid_bracket_2.pas  valid_identifier_1.c  valid_identifier_1.pas  valid_identifier_2.c  valid_identifier_2.pas  valid_number_1.c  valid_number_1.pas  valid_number_2.c  (+1 more)
tests_touge/: 3_remaining.md  talk_with_gpt.md
(+91 files in other folders)
